fix: horizontal scrollbar fix

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -209,3 +209,7 @@ p {
 .navbar-inverse {
   border-color: transparent;
 }
+
+.container-fluid {
+  padding: 0 15px;
+}
